# vulkan_renderer

./: .gitignore  Cargo.toml  Notes.md  README.md  run-macos.sh
shaders/: shader.frag  shader.vert  shader_textured.frag  shader_textured.vert  triangle.vert
src/: main.rs
src/vulkan/: app.rs  command_pool.rs  debug_utils.rs  index_buffer.rs  logical_device.rs  mod.rs  physical_device.rs  pipeline.rs  queue.rs  render_pass.rs  renderable.rs  surface.rs  swapchain.rs  texture.rs  textured_vertex.rs  vertex.rs  vertex_buffer.rs
