[package]
name = "vulkan_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.0", features = ['linked'] }
winit = "0.26.1"
ash-window = "0.10.0"
vk-shader-macros = "0.2.8"
memoffset = "0.6.5"
